--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Random Fact App</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Words of Wisdom</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Did You Know?</h1>
-    <p id="fact-display">Click the button for a fun fact!</p>
-    <button id="generate-btn">Generate Fact</button>
-  </div>
-  <script src="script.js"></script>
+    <div id="container">
+        <div id="proverb"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
