--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Words of Wisdom</title>
+    <title>Inspirational Quotes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">
         <div id="proverb"></div>
+        <button id="changeQuoteButton">New Quote</button>
     </div>
     <script src="script.js"></script>
 </body>
